Fixed contact alignment

--- a/css/style.scss
+++ b/css/style.scss
@@ -81,7 +81,7 @@ img{
 	margin: 0 3%;
 }
 @media screen and (min-width: 768px){
-	#nav, #masthead, #content, #colophone{
+	#nav, #masthead, #content, #contact{
 		margin: 0 5%;
 	}
 }
